<resources>
    <string name="app_name">EnCaliente</string>
    <string name="email">usuario@correo.com</string>
    <string name="password">*********</string>
    <string name="login">Iniciar sesión</string>
    <string name="sing_up">Regístrate aquí</string>
    <string name="title_app">En</string>
    <string name="title_app_hornie">Caliente</string>
    <string name="hint_number">**********</string>
    <string name="hint_otp">******</string>
    <string name="validate_phone_number">Verifica tu número de teléfono</string>
    <string name="description_number_verify">Si continúas, es posible que recibas un SMS de  verificación. Pueden aplicarse las tarifas de  mensajes y de datos.</string>
    <string name="description_otp">Ingresa el código de 4 dígitos enviado al 5620845397.</string>
    <string name="re_send_otp">Reenviar código de verificación</string>
    <string name="validate_mail">¿Cuál es tu dirección de correo electrónico?</string>
    <string name="description_mail">Los recibos se enviarán a tu correo electrónico</string>
    <string name="hint_mail">correo@electronico.com</string>
    <string name="validate_pass">Crea la contraseña de tu cuenta</string>
    <string name="description_password_rules">La contraseña deberá tener un mínimo de 8 caracteres, incluir un número y al menos una letra.</string>
    <string name="hint_password">**********************</string>
    <string name="validate_data_user">¿Cuál es tu nombre?</string>
    <string name="description_data_user">Indícanos como deberíamos llamarte</string>
    <string name="hint_name_user">Ingresa tu nombre</string>
    <string name="hint_last_name">Ingresa tu aprellido</string>
    <string name="title_terms_conditions">Revisa los términos y el Aviso de privacidad de EnCaliente</string>
    <string name="description_terms_conditions">Marca la casilla para indicar que eres mayor de 18 años, acepta los Términos de uso yreconoces la Política de privacidad.</string>
    <string name="error_empty_phone">¡Debes escribir un número de teléfono!</string>
    <string name="error_validate_phone">Tu número de teléfono debe ser válido</string>
    <string name="send_otp">Se envió el OTP, espere unos segundos</string>
    <string name="error_otp_empty">¡Debes escribir el OTP para continuar!</string>
    <string name="error_otp_validate">OTP inválido, inténtalo de nuevo</string>
    <string name="error_dont_exist_otp">El OTP no existe, inténtalo de nuevo</string>
    <string name="error_empty_pass">¡Debes escribir una contraseña!</string>
    <string name="error_validate_pass">Debes introducir una contraseña válida</string>
    <string name="error_empty_mail">¡Debes escribir un correo electrónico!</string>
    <string name="error_validate_email">Debes ingresar un correo electrónico válido</string>
    <string name="error_user_data_empty">Ningún campo debe estar vacío</string>
    <string name="error_validate_terms_and_conditions">Para usar esta app, debes aceptar los términos y condiciones</string>
    <string name="error_login">Tus datos son erróneos</string>
    <string name="register_done">Se registró el usuario correctamente</string>
    <string name="error_register">No se pudo registrar el usuario, por favor inténtelo de nuevo</string>
</resources>