<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.childfragments.codeconfirm.CodeConfirmFragment">

    <TextView
        android:id="@+id/tvEn"
        style="@style/textMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_app"
        android:layout_marginStart="@dimen/dp32"
        android:layout_marginEnd="@dimen/dp32"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/sp60"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCaliente"
        style="@style/textMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp32"
        android:layout_marginEnd="@dimen/dp32"
        android:text="@string/title_app_hornie"
        android:fontFamily="@font/poppins_medium"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/sp60"
        android:layout_marginTop="@dimen/dp70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvEn" />

    <TextView
        android:id="@+id/tvTitlePhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp32"
        android:layout_marginTop="@dimen/dp32"
        android:layout_marginEnd="@dimen/dp32"
        android:text="@string/validate_phone_number"
        android:textSize="@dimen/sp24"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCaliente" />

    <EditText
        android:id="@+id/etOtp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_marginStart="@dimen/dp32"
        android:layout_marginEnd="@dimen/dp32"
        android:layout_marginTop="@dimen/dp16"
        android:background="@android:color/transparent"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:hint="@string/hint_otp"
        android:inputType="number"
        android:maxLength="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/description_otp"
        android:textColor="@color/color_gray_hint"
        app:layout_constraintEnd_toEndOf="@+id/tvTitlePhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/tvTitlePhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/tvTitlePhoneNumber" />

    <TextView
        android:id="@+id/tvSendAgainOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/re_send_otp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/dp16"
        app:layout_constraintStart_toStartOf="@+id/etOtp"
        app:layout_constraintTop_toBottomOf="@+id/etOtp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabConfirmOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorAccent"
        android:clickable="true"
        android:src="@drawable/ic_siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@null"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>